attempting to fix backgroundimg jump on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,5 @@
 html {
-	height: 100vh;
-	background: url(../images/tanbarblue.jpg) no-repeat center center fixed;
-	-webkit-background-size: 60%;
-	-moz-background-size: 60%;
-	-o-background-size: 60%;
-	background-size: 60%;
+	
 }
 
 *,
@@ -16,6 +11,12 @@ html {
 body {
 	background-color: transparent;
 	color: whitesmoke;
+	background: url(../images/tanbarblue.jpg) no-repeat center center fixed;
+	-webkit-background-size: 60%;
+	-moz-background-size: 60%;
+	-o-background-size: 60%;
+	background-size: 60%;
+	height: 100vh;
 }
 
 nav {
@@ -99,7 +100,7 @@ nav {
 	background-color: white!important;
 	font-size: 30px;
 	height: 80px;
-	margin-top: -50px;
+	margin-top: -100px;
 }
 
 .container1 a:hover {
